@@ -1,4 +1,5 @@
 {{$NEXT}}
+   - Add PDF::Signature byte-range() method
 
 0.5.6  2022-09-04T06:04:03+12:00
    - Fix pdf-checker.raku for PDF::Content v0.6.3
